# radiometer_logging

./: .gitignore  LICENSE  README.md  Thermopile-Pyranometer-Unamplified.CR1  cr1000utils.py  get_data.py  make_plots.py  pyproject.toml  radiometer.CR1  read_data_python.py  set_time.py  two_radiometers.CR1  two_radiometers_klenova.CR1  two_radiometers_shackleton.CR1
debugging_scripts/: get_progstats.py
example_datalogger_scripts/: Thermopile-Pyrgeometer-Unamplified.CR1
