[project]
name = "radiometer_logging"
version = "0.1.0"
description = "Python utilities for logging radiometer data from a CR1000 datalogger."
authors = [
    {name = "Tim Player", email="timrplayer@gmail.com"},
    {email = "timrplayer@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

keywords = ["radiometer"]

classifiers = [
    "Topic :: Meteorology"
]

# Requirements: This is done differently by poetry!
dependencies = [
    "pandas"
]

[project.urls]
repository = "https://github.com/playertr/radiometer_logging.git"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''


(
  /(
    | \.git          # root of the project
  )/
  | *.CR1
)
'''

[tool.setuptools]
py-modules = []